@@ -3,7 +3,7 @@
 $GLOBALS['T3_VAR']['ext'][$_EXTKEY]['setup'] = unserialize($_EXTCONF);
 
 
-if ($GLOBALS['T3_VAR']['ext'][$_EXTKEY]['setup']['ctype_image_add_ref']) {
+if ($GLOBALS['T3_VAR']['ext'][$_EXTKEY]['setup']['ctypes_textpic_image_add_ref']) {
 
 	t3lib_extMgm::addTypoScript(
 		$_EXTKEY,
@@ -27,17 +27,6 @@ if ($GLOBALS['T3_VAR']['ext'][$_EXTKEY]['setup']['ctype_image_add_ref']) {
 		tt_content.image.20.imgPath >
 		tt_content.image.20.imgPath =
 
-		',
-		43
-	);
-}
-
-if ($GLOBALS['T3_VAR']['ext'][$_EXTKEY]['setup']['ctype_textpic_add_ref']) {
-
-	t3lib_extMgm::addTypoScript(
-		$_EXTKEY,
-		'setup','
-		includeLibs.tx_damttcontent = EXT:dam/lib/class.tx_dam_tsfe.php
 
 		temp.tx_dam.fileList < tt_content.textpic.20.imgList
 
