@@ -1,3 +1,7 @@
+2011-01-12  Dan Osipov <dosipov@phillyburbs.com>
+
+	* Fixed Bug #16349: Adapt dam_tt_content to the TCA changes in TYPO3 4.5 (Thanks Lorenz Ulrich)
+
 2008-09-30  Michiel Roos <michiel@netcreators.com>
 
 	* Fixed Bug #10284: dam_ttcontent has the string '\ No new line at end of file' at the end of several files
